# QGMVP

./: CITATION.cff  LICENSE  README.md  main.py  parameters.py  pyproject.toml  test.json
QGMVP/: __init__.py
QGMVP/ansatz/: Ansatz.py  CostOp.py  Initial.py  Mixer.py  Noisy.py  __init__.py
QGMVP/classic/: CostFun.py  __init__.py
QGMVP/encode/: __init__.py  enco_main.py
QGMVP/measure/: __init__.py  stat.py
QGMVP/optimizer/: __init__.py  cOpt.py  cOptimizer.py
QGMVP/po/: __init__.py  models.py
QGMVP/quantum_obj/: qOpt.py  qpOpt.py
QGMVP/utils/: Util.py
config/: conf_cpu.json  conf_gpu.json  conf_noise.json
po/: README
po/expParam/: n2_p.pkl  n3_p.pkl  n4_1.pkl  n4_p.pkl  n5_p.pkl  n6_p.pkl  n7_p.pkl  n8.pkl  n8_p.pkl  rand_assets_short_market_n2N10_slec.pkl  rand_assets_short_market_n3.pkl  rand_assets_short_market_n3N12_slec.pkl  rand_assets_short_market_n3N15_slec.pkl  rand_assets_short_market_n3N18_slec.pkl  rand_assets_short_market_n3N6_slec.pkl  rand_assets_short_market_n3N9_slec.pkl  rand_assets_short_market_n4.pkl  rand_assets_short_market_n4N20_slec.pkl  rand_assets_short_market_n4N24_slec.pkl  rand_assets_short_market_n5.pkl  rand_assets_short_market_n5N20_slec.pkl  rand_assets_short_market_n5N25_slec.pkl  rand_assets_short_market_n6N18_slec.pkl  rand_assets_short_market_n6N24_slec.pkl
