[tool.poetry]
name = "QGMVP"
version = "1.0.0"
description = "Quantum solver to the Global Minimal Variance Portfolio (QGMVP)"
authors = ["Haomu Yuan"]
packages = [
    { include = "QGMVP", from = '.' }
]

[tool.poetry.dependencies]
python = "^3.10"
qiskit = "1.2.0"
qiskit-aer = "0.15.0"
qiskit-aer-gpu = "0.15.0"
qiskit-ibm-runtime = "0.20.0"
qiskit-ibm-experiment = "0.4.7"
tqdm = "4.66.5"
numba = "0.60.0"
prometheus-client = "0.17.0"
matplotlib = "3.7.2"
cvxopt = "1.3.2"
cvxpy = "1.5.3"
statsmodels = "0.14.0"
plotly = "5.15.0"
distfit = "1.6.10"
pandas = "2.0.3"
seaborn = "0.12.2"
pytest = "^7.3"
scipy = "^1.14"
cirq = "1.3.0"
numpy = ">=1.19.2"
torch = ">=1.8.0"
paramiko= "3.4.1"
yfinance="0.2.43"
pandas_datareader="0.10.0"
igraph="0.11.6"
cairocffi="1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
